--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
     "react": "^19.1.1",
     "react-cookie": "^8.0.1",
@@ -40,6 +41,7 @@
     "@vitejs/plugin-react": "^5.0.3",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -47,6 +49,7 @@
     "eslint-plugin-storybook": "9.1.9",
     "globals": "^16.4.0",
     "playwright": "^1.55.1",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "storybook": "9.1.9",
