--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "eslint-plugin-storybook": "9.1.9",
     "globals": "^16.4.0",
+    "msw": "^2.11.3",
     "playwright": "^1.55.1",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
@@ -59,5 +60,10 @@
     "vite": "^7.1.7",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
