--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "@mui/material": "^7.3.2",
     "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
+    "outdent": "^0.8.0",
     "react": "^19.1.1",
     "react-cookie": "^8.0.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.3"
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.9.3",
+    "rehype-sanitize": "^6.0.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "4.1.1",
@@ -32,6 +36,7 @@
     "@storybook/addon-vitest": "9.1.9",
     "@storybook/react": "^9.1.9",
     "@storybook/react-vite": "^9.1.9",
+    "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.13",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^24.6.0",
