--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.3",
     "rehype-sanitize": "^6.0.0",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "4.1.1",
